--- a/index-2.html
+++ b/index-2.html
@@ -30,7 +30,12 @@
 
 <body>
   <!-- Preloader -->
-
+  <div id="preloader">
+    <span class="ring">
+        <span></span>
+        <img src="images/TardgoLogo.png" alt="TardgoLogo">
+    </span>
+</div>
   <!-- Preloader End -->
 
   <!-- Document Wrapper   
