--- a/index-2.html
+++ b/index-2.html
@@ -30,12 +30,12 @@
 
 <body>
   <!-- Preloader -->
-  <div id="preloader">
+  <!-- <div id="preloader">
     <span class="ring">
       <span></span>
       <img src="images/TardgoLogo.png" alt="TardgoLogo Keval">
     </span>
-  </div>
+  </div> -->
   <!-- Preloader End -->
 
   <!-- Document Wrapper   
