--- a/index-2.html
+++ b/index-2.html
@@ -30,12 +30,12 @@
 
 <body>
   <!-- Preloader -->
-  <!-- <div id="preloader">
+  <div id="preloader">
     <span class="ring">
       <span></span>
-      <img src="images/TardgoLogo.png" alt="TardgoLogo Keval">
+      <img src="images/TardgoLogo.png" alt="TardgoLogo">
     </span>
-  </div> -->
+  </div>
   <!-- Preloader End -->
 
   <!-- Document Wrapper   
@@ -115,9 +115,9 @@
                   d="M18 11.03C17.52 8.18 15.04 6 12.05 6C9.02 6 5.76 8.51 6.02 12.45C8.49 11.44 10.35 9.24 10.88 6.56C12.19 9.19 14.88 11 18 11.03Z" />
               </svg>
             </a>
-            <a href="#" data-bs-toggle="modal" data-bs-target="#PaytmPaymentSuccessful_modal">
+            <!-- <a href="#" data-bs-toggle="modal" data-bs-target="#PaytmPaymentSuccessful_modal">
               <img src="" alt="Paytm">
-            </a>
+            </a> -->
             <!-- Collapse Button
 		  =============================== -->
             <div class="vr mx-2 h-25 my-auto"></div>
